--- a/assets/css/pages/auth.css
+++ b/assets/css/pages/auth.css
@@ -9,11 +9,15 @@ body {
 
 #auth #auth-right {
 	height: 100%;
-	background: url(../../images/bg/4853433.jpg), linear-gradient(90deg, #2d499d, #3f5491)
+	background: url(../../images/bg/BicolU.jpg), linear-gradient(90deg, #2d499d, #3f5491);
+	background-size: 1100px 700px;
+	background-repeat: no-repeat;
 }
 
 #auth #auth-left {
-	padding: 3rem 8rem
+	padding: 9rem 5rem;
+	align-items: center;
+	box-shadow: 9px;
 }
 
 #auth #auth-left .auth-title {
@@ -24,7 +28,7 @@ body {
 #auth #auth-left .auth-subtitle {
 	font-size: 1.7rem;
 	line-height: 2.5rem;
-	color: #a8aebb
+	color: #91959c
 }
 
 #auth #auth-left .auth-logo {
